--- a/main/apps/dashboard/templates/dashboard/index.html
+++ b/main/apps/dashboard/templates/dashboard/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 	<div id="wrapper">
+		<div>
+			{% if messages %}
+				<ul class="messages">
+				    {% for message in messages %}
+				    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+				    {% endfor %}
+				</ul>
+			{% endif %}
+		</div>
+		
 		<div class="header">
 			<p>Test App</p>
 			<p>Home</p>
