--- a/main/apps/dashboard/templates/dashboard/login.html
+++ b/main/apps/dashboard/templates/dashboard/login.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 	<div id="wrapper">
+		<div class="header">
+			<p>Test App</p>
+			<p>Home</p>
+			<p><a href="/login">Sign In</a>
+		</div>
 		<div>
 			{% if messages %}
 				<ul class="messages">
@@ -15,6 +20,7 @@
 				</ul>
 			{% endif %}
 		</div>
+
 
 		<div class="main">
 
