--- a/main/apps/dashboard/templates/dashboard/adduser.html
+++ b/main/apps/dashboard/templates/dashboard/adduser.html
@@ -2,25 +2,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>register </title>
+	<title>New User</title>
 </head>
 <body>
 	<div id="wrapper">
-	
-		<div class="main">
+		<div class="header">
+			<p>Test App</p>
+			<p><a href="/dashboard">Dashboard</a></p>
+			<p><a href="/">Profile</a></p>
+			<p><a href="/logout">Log Off</a></p>
+		</div>
+		<div class="addnewuser">
 
-			<h1>Registration</h1>
+			<h1>Add a new user</h1>
 			
-			<form action="/register" method="POST">
+			<form action="/createuser" method="POST">
 			{% csrf_token %}
+				<label for ="email">Email:</label> 
+				<input type="text" name="email"> <br>
+
 				<label for ="first_name">First Name:</label> 
 				<input type="text" name="first_name"><br>
 				
 				<label for ="last_name">Last Name:</label> 
 				<input type="text" name="last_name"><br>
-				
-				<label for ="email">Email:</label> 
-				<input type="text" name="email"> <br>
 				
 				<label for ="password">Password:</label> 
 				<input type="password" name="password"> <br>
@@ -28,13 +33,13 @@
 				<label for ="confirm_password">Confirm Password:</label>  
 				<input type="password" name="confirm_password"> <br>
 
-				<input type="submit" name="register">
+				<input type="submit" value="Create">
 			</form>
 			  
 		</div>
 		
-		
 	</div>
+
 
 </body>
 </html>
