--- a/main/apps/dashboard/templates/dashboard/dashboard.html
+++ b/main/apps/dashboard/templates/dashboard/dashboard.html
@@ -18,7 +18,7 @@
 		<div class="header">
 			<p>Test App</p>
 			<p><a href="/dashboard">Dashboard</a></p>
-			<p><a href="/">Profile</a></p>
+			<p><a href="/users/edit">Profile</a></p>
 			<p><a href="/logout">Log Off</a></p>
 		</div>
 		
@@ -43,6 +43,7 @@
 				<td> <a href="users/show/{{person.id}}">{{person.first_name}} {{person.last_name}}</a> </td>
 				<td>{{ person.email}} </td>
 				<td>{{ person.created_at  }} </td>
+		
 				<td>{{ person.user_level }} </td>
 				<td> <a href="users/edit/{{person.id}}">edit</a>  <a href="deleteuser/{{person.id}}">remove</a></td>
 
