--- a/main/apps/dashboard/templates/dashboard/deleteuser.html
+++ b/main/apps/dashboard/templates/dashboard/deleteuser.html
@@ -9,7 +9,7 @@
 		<div class="header">
 			<p>Test App</p>
 			<p><a href="/dashboard">Dashboard</a></p>
-			<p><a href="/">Profile</a></p>
+			<p><a href="/users/edit">Profile</a></p>
 			<p><a href="/logout">Log Off</a></p>
 		</div>
 		<div class="main">
