--- a/main/apps/dashboard/templates/dashboard/index.html
+++ b/main/apps/dashboard/templates/dashboard/index.html
@@ -1,11 +1,14 @@
+{% include "dashboard/helpers/head.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Home Page</title>
-</head>
-<body>
-	<div id="wrapper">
+{% include "dashboard/helpers/nav.html" %}
+
+		<div class="jumbotron">
+		  <h1 class="display-4">Welcome to Dashboard!</h1>
+		  <p class="lead">I worked on a cool application using a MVC framework! </p>
+		  <hr class="my-4">
+		  <p>This application was built by David Kang!</p>
+		  <a class="btn btn-primary btn-lg" href="/process" role="button">START</a>
+		</div>
 		<div>
 			{% if messages %}
 				<ul class="messages">
@@ -16,33 +19,33 @@
 			{% endif %}
 		</div>
 		
-		<div class="header">
-			<p>Test App</p>
-			<p>Home</p>
-			<p><a href="/login">Sign In</a>
-		</div>
-		<div class="Main">
+	<!-- 	<div class="welcome">
 			<h1>Welcome to the Test</h1>
-			<p>We're going to build a cool application using a MVC framework! This application was built with the folks!</p>
+			<p>I worked on a cool application using a MVC framework! This application was built by me!</p>
 			<p><a href="/process">START</a></p>	
+		</div> -->
+
+
+		<div class="container">
+			<div class="row">
+				
+		
+				<div class="col">
+					<h3>Manage Users</h3>
+					<p>Using this application, you'll learn how to add, remove, and edit users for the application.</p>
+				</div>
+		
+
+				<div class="col">
+					<h3>Leave messages</h3>
+					<p>Users will be able to leave a message to another user using this application.</p>
+				</div>
+
+				<div class="col">
+					<h3>Edit User information</h3>
+					<p>Admins will be able to edit another user's information(email address, first name, last name, etc).</p>
+				</div>
+			</div>
+
 		</div>
-		<div class="bottom">
-			<div class="one">
-				<h3>Manage Users</h3>
-				<p>Using this application, you'll learn how to add, remove, and edit users for the application.</p
-			</div>
-
-			<div class="two">
-				<h3>Leave messages</h3>
-				<p>Users will be able to leave a message to another user using this application.</p>
-			</div>
-
-			<div class="three">
-				<h3>Edit User information</h3>
-				<p>Admins will be able to edit another user's information(email address, first name, last name, etc).</p>
-			</div>
-
-		</div>
-	</div>
-</body>
-</html>
+{% include "dashboard/helpers/footer.html" %}
