--- a/main/apps/dashboard/templates/dashboard/editmyprofile.html
+++ b/main/apps/dashboard/templates/dashboard/editmyprofile.html
@@ -1,70 +1,87 @@
+{% include "dashboard/helpers/head.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Edit User</title>
-</head>
-<body>
-	<div id="wrapper">
+{% include "dashboard/helpers/loggednav.html" %}
 
-		<div class="header">
-			<p>Test App</p>
-			<p><a href="/dashboard">Dashboard</a></p>
-			<p><a href="/users/edit">Profile</a></p>
-			<p><a href="/logout">Log Off</a></p>
+<h1>Edit my profile</h1>
+<div>
+	{% if messages %}
+		<ul class="messages">
+		    {% for message in messages %}
+		    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+		    {% endfor %}
+		</ul>
+	{% endif %}
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col">
+				<form action= "/updatemyprofile" method="POST">
+			<!-- <form action="/updateid/{{user.id}}" method="POST"> -->
+				<h4>Edit information</h4>
+				{% csrf_token %}
+					<div class="form-group">
+				    	<label for="email">Email Address:</label>
+				    	<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Email" name="email" value="{{ user.email }}">
+
+				  	</div>
+
+					<div class="form-group">
+				    	<label for="first_name">First Name:</label>
+				   		<input type="text" class="form-control" id="first_name" placeholder="First Name" name="first_name" value="{{ user.first_name }}">
+				  	</div>	
+
+					<div class="form-group">
+				    	<label for="last_name">Last Name:</label>
+				   		<input type="text" class="form-control" id="first_name" placeholder="Last Name" name="last_name" value="{{ user.last_name }}">
+				  	</div>	
+
+				<!-- 	User Level: 
+					
+					<div class="form-group">
+				    	<select name="user_level" class="form-control">
+						<option value=1>normal</option>
+						<option value=9>admin</option>
+					</select>
+				   		
+				  	</div> -->
+					<button type="submit" class="btn btn-primary">Save</button>
+						
+			</form>
 		</div>
 
-		<h1>Edit my profile</h1>
-
-		<h3>Edit information</h3>
-		<form action="/updatemyprofile" method="POST">
-			{% csrf_token %}
-				<label for ="email">Email:</label> 
-				<input type="text" name="email" value="{{user.email}}"> <br>
-
-				<label for ="first_name">First Name:</label> 
-				<input type="text" name="first_name" value="{{user.first_name}}"><br>
-				
-				<label for ="last_name">Last Name:</label> 
-				<input type="text" name="last_name" value="{{user.last_name}}"><br>
-
-				User Level: <br>
-				
-				<select name="user_level">
-					<option value=1>normal</option>
-					<option value=9>admin</option>
-				</select>
-				<br>
-				<input type="submit" value="save">
-				<br>
-				
-				
-				
-		</form>
-		<h3>Change password</h3>
-		<form action="/updatemypassword" method="POST">
-			{% csrf_token %}
-			<label for ="password">Password:</label> 
-				<input type="password" name="password"> <br>
-				
-				<label for ="confirm_password">Confirm Password:</label>  
-				<input type="password" name="confirm_password"> <br>
-				<input type="submit" value="Update Password">
-		</form>
-		
-
-		<div id="description">
-			<h3>Edit Description</h3>
+		<div class="col">
 			
-			<form action="/editdescription" method="POST">
-			{% csrf_token %}
-			<label for ="description">Edit my desciption:</label> <br>
-				
-				<input type="textarea" name="description"> <br>
-				<input type="submit" value="Update Description">
-		</form>
-		</div>
-	</div>
+			<form action="/updatemypassword" method="POST">
+				<h4>Change password</h4>
+				{% csrf_token %}
+				<div class="form-group">
+			    	<label for="password">Password:</label>
+			    	<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+			  	</div>
 
-</body>
-</html>
+			  	<div class="form-group">
+			    	<label for="confirm_password">Confirm Password:</label>
+			   		<input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password" name="confirm_password">
+			  	</div>	
+
+			  	<button type="submit" class="btn btn-primary">Update Password</button>
+
+			</form>
+		</div>
+		
+	</div>
+</div>
+<br>
+
+<div class="form-group">
+ 	<form action="/editdescription" method="POST">
+			{% csrf_token %}
+    <h4>Edit Description</h4>
+    <textarea name="description" class="form-control" id="description" rows="3"></textarea> <br>
+
+    <button type="submit" class="btn btn-primary">Save</button>
+	</form>
+
+</div>
+
+{% include "dashboard/helpers/footer.html" %}
