--- a/main/apps/dashboard/templates/dashboard/register.html
+++ b/main/apps/dashboard/templates/dashboard/register.html
@@ -1,40 +1,60 @@
+{% include "dashboard/helpers/head.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>register </title>
-</head>
-<body>
-	<div id="wrapper">
+{% include "dashboard/helpers/nav.html" %}
+		
+		<div>
+			{% if messages %}
+				<ul class="messages">
+				    {% for message in messages %}
+				    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+				    {% endfor %}
+				</ul>
+			{% endif %}
+		</div>
 	
 		<div class="main">
 
 			<h1>Registration</h1>
 			
 			<form action="/register" method="POST">
-			{% csrf_token %}
-				<label for ="first_name">First Name:</label> 
-				<input type="text" name="first_name"><br>
-				
-				<label for ="last_name">Last Name:</label> 
-				<input type="text" name="last_name"><br>
-				
-				<label for ="email">Email:</label> 
-				<input type="text" name="email"> <br>
-				
-				<label for ="password">Password:</label> 
-				<input type="password" name="password"> <br>
-				
-				<label for ="confirm_password">Confirm Password:</label>  
-				<input type="password" name="confirm_password"> <br>
+				{% csrf_token %}
 
-				<input type="submit" name="register">
+				<div class="form-group">
+			    	<label for="first_name">First Name</label>
+			   		<input type="text" class="form-control" id="first_name" placeholder="First Name" name="first_name">
+			  	</div>	
+
+				<div class="form-group">
+			    	<label for="last_name">Last Name</label>
+			   		<input type="text" class="form-control" id="first_name" placeholder="Last Name" name="last_name">
+			  	</div>	
+
+			 	<div class="form-group">
+			    	<label for="email">Email Address</label>
+			    	<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Email" name="email">
+
+			   		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone.</small>
+			  	</div>
+
+			  	<div class="form-group">
+			    	<label for="password">Password</label>
+			    	<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+			  	</div>
+
+			  	<div class="form-group">
+			    	<label for="confirm_password">Confirm Password</label>
+			   		<input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password" name="confirm_password">
+			  	</div>	
+
+			  	<button type="submit" class="btn btn-primary">Register</button>
 			</form>
-			  
+
+
+			<div>
+			<a href="/login" class="registered">Already have an account? Login</a>
+			</div>
+
 		</div>
 		
 		
-	</div>
-
-</body>
-</html>
+{% include "dashboard/helpers/footer.html" %}
