--- a/main/apps/dashboard/templates/dashboard/dashboard.html
+++ b/main/apps/dashboard/templates/dashboard/dashboard.html
@@ -4,15 +4,7 @@
 
 <div id="wrapper">
 
-	<div>
-		{% if messages %}
-			<ul class="messages">
-			    {% for message in messages %}
-			    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-			    {% endfor %}
-			</ul>
-		{% endif %}
-	</div>
+{% include "dashboard/helpers/messages.html" %}
 
 	<div id="main">
 		<h2>Manage Users</h2>
