--- a/main/apps/dashboard/templates/dashboard/editmyprofile.html
+++ b/main/apps/dashboard/templates/dashboard/editmyprofile.html
@@ -3,21 +3,14 @@
 {% include "dashboard/helpers/loggednav.html" %}
 
 <h1>Edit my profile</h1>
-<div>
-	{% if messages %}
-		<ul class="messages">
-		    {% for message in messages %}
-		    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-		    {% endfor %}
-		</ul>
-	{% endif %}
-</div>
+
+{% include "dashboard/helpers/messages.html" %}
+
 <div class="container">
 	<div class="row">
 		<div class="col">
 				<form action= "/updatemyprofile" method="POST">
-			<!-- <form action="/updateid/{{user.id}}" method="POST"> -->
-				<h4>Edit information</h4>
+					<h4>Edit information</h4>
 				{% csrf_token %}
 					<div class="form-group">
 				    	<label for="email">Email Address:</label>
@@ -35,15 +28,7 @@
 				   		<input type="text" class="form-control" id="first_name" placeholder="Last Name" name="last_name" value="{{ user.last_name }}">
 				  	</div>	
 
-				<!-- 	User Level: 
-					
-					<div class="form-group">
-				    	<select name="user_level" class="form-control">
-						<option value=1>normal</option>
-						<option value=9>admin</option>
-					</select>
-				   		
-				  	</div> -->
+			
 					<button type="submit" class="btn btn-primary">Save</button>
 						
 			</form>
