--- a/main/apps/dashboard/templates/dashboard/edituser.html
+++ b/main/apps/dashboard/templates/dashboard/edituser.html
@@ -4,15 +4,7 @@
 
 <h1>Edit User #{{ user.id }}</h1>
 
-<div>
-	{% if messages %}
-		<ul class="messages">
-		    {% for message in messages %}
-		    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-		    {% endfor %}
-		</ul>
-	{% endif %}
-</div>
+{% include "dashboard/helpers/messages.html" %}
 
 <div class="container">
 	<div class="row">
