--- a/main/apps/dashboard/templates/dashboard/register.html
+++ b/main/apps/dashboard/templates/dashboard/register.html
@@ -2,15 +2,7 @@
 
 {% include "dashboard/helpers/nav.html" %}
 		
-		<div>
-			{% if messages %}
-				<ul class="messages">
-				    {% for message in messages %}
-				    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-				    {% endfor %}
-				</ul>
-			{% endif %}
-		</div>
+{% include "dashboard/helpers/messages.html" %}
 	
 		<div class="main">
 
