--- a/main/apps/dashboard/templates/dashboard/userinfo.html
+++ b/main/apps/dashboard/templates/dashboard/userinfo.html
@@ -2,15 +2,7 @@
 
 {% include "dashboard/helpers/loggednav.html" %}
 
-<div>
-	{% if messages %}
-		<ul class="messages">
-		    {% for message in messages %}
-		    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-		    {% endfor %}
-		</ul>
-	{% endif %}
-</div>
+{% include "dashboard/helpers/messages.html" %}
 
 <div class="top">
 	<h1>{{ user.first_name}} {{ user.last_name }}</h1>
